test/ingress/echo-cp.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: echo-cp
  labels:
    app: echo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: echo
  template:
    metadata:
      labels:
        app: echo
    spec:
      containers:
      - name: echo
        image: docker.io/hashicorp/http-echo:0.2.3
        args:
        - "-listen=:8080"
        - "-text=hello world 1 from control plane"
        ports:
        - name: http
          containerPort: 8080
        resources: {}
      tolerations:
      - effect: NoSchedule
        key: node-role.kubernetes.io/master
      - effect: NoSchedule
        key: node-role.kubernetes.io/control-plane
      - effect: NoSchedule
        key: node.kubernetes.io/not-ready
      affinity:
        nodeAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
          - weight: 10
            preference:
              matchExpressions:
              - key: node-role.kubernetes.io/control-plane
                operator: Exists
          - weight: 10
            preference:
              matchExpressions:
              - key: node-role.kubernetes.io/master
                operator: Exists
---
kind: Service
apiVersion: v1
metadata:
  name: echo
spec:
  type: ClusterIP
  selector:
    app: echo
  ports:
  - name: http
    protocol: TCP
    port: 8080
    targetPort: http
