test/ingress/echo-ds.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: echo
  namespace: ingress-test
  labels:
    app: echo
spec:
  selector:
    matchLabels:
      app: echo
  template:
    metadata:
      labels:
        app: echo
    spec:
      terminationGracePeriodSeconds: 0
      containers:
      - name: echo
        image: docker.io/hashicorp/http-echo:0.2.3
        args:
        - "-listen=:8080"
        - "-text=hello world $(POD_NAME)"
        env:
        - name: POD_NAME
          valueFrom:
            fieldRef:
              fieldPath: metadata.name
        ports:
        - name: http
          containerPort: 8080
        resources: {}
      tolerations:
      - effect: NoSchedule
        operator: Exists
---
kind: Service
apiVersion: v1
metadata:
  name: echo
  namespace: ingress-test
spec:
  type: ClusterIP
  selector:
    app: echo
  ports:
  - name: http
    protocol: TCP
    port: 8080
    targetPort: http
