test/ingress/echo.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: echo
  namespace: ingress-test
  labels:
    app: echo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: echo
  template:
    metadata:
      labels:
        app: echo
    spec:
      terminationGracePeriodSeconds: 1
      containers:
      - name: echo
        image: docker.io/hashicorp/http-echo:0.2.3
        args:
        - "-listen=:8080"
        - "-text=hello world $(POD_NAME)"
        env:
        - name: POD_NAME
          valueFrom:
            fieldRef:
              fieldPath: metadata.name
        ports:
        - name: http
          containerPort: 8080
        resources:
          requests:
            memory: 1Mi
          limits:
            memory: 5Mi
