test/ingress/sample.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: echo
  labels:
    app: echo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: echo
  template:
    metadata:
      labels:
        app: echo
    spec:
      containers:
      - name: echo
        image: docker.io/hashicorp/http-echo:0.2.3
        args:
        - "-listen=:8080"
        - "-text=hello world 1"
        ports:
        - name: http
          containerPort: 8080
        resources: {}
---
kind: Service
apiVersion: v1
metadata:
  name: echo
spec:
  type: ClusterIP
  selector:
    app: echo
  ports:
  - name: http
    protocol: TCP
    port: 8080
    targetPort: http
