test/ingress/service.yaml
---
kind: Service
apiVersion: v1
metadata:
  name: echo
  namespace: ingress-test
spec:
  type: ClusterIP
  selector:
    app: echo
  ports:
  - name: http
    protocol: TCP
    port: 8080
    targetPort: http
